through step 10 of martin's aquarium

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <body>
         <main>
             <article>
-                <h1>Fish List</h1>
                 <section id="container">
                 </section>
                 <section>
@@ -22,76 +21,22 @@
                     <p>Download useful apps! translation, ride share, subway/train/bus times</p>
                 </div>
                 </section>
-                <section>
-                    <h1>Locations</h1>
+                <section id="locationList">
+                    <!-- <h1>Locations</h1>
                 <div class="locations">
                     <p>Argentina</p>
                     <p>Mexico</p>
                     <p>Sri Lanka</p>
                     <p>South America</p>
                     <p>Amazon</p>
-                </div>
+                </div> -->
                 </section>
             </article>
         </main>
-        <aside>
-            <h1>Martin's Fish Tips</h1>
-            <p class="text">Always keep your fish in water!</p> 
-            <p>They LOVE water!</p>
+        <aside id="sideBar">
+            <!-- <p class="text">Always keep your fish in water!</p> 
+            <p>They LOVE water!</p> -->
         </aside>
         <script type="module" src="./scripts/main.js"></script>
     </body>
 </html>
-
-<!-- <section class="fishlist">
-    <div class="fish">
-        <figure><img class="fish_pic" src="https://www.thinkfish.co.uk/tropical-fish-images/banded-leoporinus-01.jpg" alt="banded leporinus fish">
-            <figcaption>Bart</figcaption></figure>
-        <ul>
-            <li class="fish_detail">food: crustaceans</li>
-            <li class="fish_detail">size: 3</li>
-            <li class="fish_detail">species: Banded Leporinus</li>
-            <li class="fish_detail">location: Amazon</li>
-        </ul>
-    </div>
-    <div class="fish">
-        <figure><img class="fish_pic" src="https://www.thinkfish.co.uk/tropical-fish-images/rummy-nose-tetra-01.jpg" alt="banded leporinus fish">
-            <figcaption>Belinda</figcaption></figure>
-        <ul>
-            <li class="fish_detail">food: smaller fish</li>
-            <li class="fish_detail">size: 2</li>
-            <li class="fish_detail">species: Rummy Note Tetra</li>
-            <li class="fish_detail">location: South America</li>
-        </ul>
-    </div>
-    <div class="fish">
-        <figure><img class="fish_pic" src="https://www.thinkfish.co.uk/tropical-fish-images/orange-chromide-01.jpg" alt="banded leporinus fish">
-            <figcaption>Beetrus</figcaption></figure>
-        <ul>
-            <li class="fish_detail">food: carrots</li>
-            <li class="fish_detail">size: 3</li>
-            <li class="fish_detail">species: Orange Chromide</li>
-            <li class="fish_detail">location: Sri Lanka</li>
-        </ul>
-    </div>
-    <div class="fish">
-        <figure><img class="fish_pic" src="" alt="banded leporinus fish">
-            <figcaption>Bruce</figcaption></figure>
-        <ul>
-            <li class="fish_detail">food: algae</li>
-            <li class="fish_detail">size: 1</li>
-            <li class="fish_detail">species: Bloodfin Tetra</li>
-            <li class="fish_detail">location: Argentina</li>
-        </ul>
-    </div>
-    <div class="fish">
-        <figure><img class="fish_pic" src="https://www.thinkfish.co.uk/tropical-fish-images/sailfin-molly-01.jpg" alt="banded leporinus fish">
-            <figcaption>Brinley</figcaption></figure>
-        <ul>
-            <li class="fish_detail">food: algae</li>
-            <li class="fish_detail">size: 2</li>
-            <li class="fish_detail">species: Sailfin Molly</li>
-            <li class="fish_detail">location: Mexico</li>
-        </ul>
-    </div>
-</section> -->
